pytigergraph/1.8/core-functions/query.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)[Next](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/base)
      * [AsyncTigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/async_base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.8/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.8/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.8/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.8/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.8/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.8/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.8/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.8/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.8/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.8/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.8/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/legacy-tg-versions)


pyTigerGraph 1.8
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
  * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.8/modules/core-functions/pages/query.adoc)
### Contents
  * [showQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_showquery)
  * [getQueryMetadata()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerymetadata)
  * [getInstalledQueries()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getinstalledqueries)
  * [runInstalledQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinstalledquery)
  * [checkQueryStatus()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_checkquerystatus)
  * [getQueryResult()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getqueryresult)
  * [runInterpretedQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinterpretedquery)
  * [getRunningQueries()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getrunningqueries)
  * [abortQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_abortquery)
  * [parseQueryOutput()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_parsequeryoutput)
  * [getStatistics()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getstatistics)
  * [describeQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_describequery)
  * [getQueryDescription()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerydescription)
  * [dropQueryDescription()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_dropquerydescription)


# Query Functions
### Contents
  * [showQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_showquery)
  * [getQueryMetadata()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerymetadata)
  * [getInstalledQueries()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getinstalledqueries)
  * [runInstalledQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinstalledquery)
  * [checkQueryStatus()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_checkquerystatus)
  * [getQueryResult()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getqueryresult)
  * [runInterpretedQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinterpretedquery)
  * [getRunningQueries()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getrunningqueries)
  * [abortQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_abortquery)
  * [parseQueryOutput()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_parsequeryoutput)
  * [getStatistics()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getstatistics)
  * [describeQuery()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_describequery)
  * [getQueryDescription()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerydescription)
  * [dropQueryDescription()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_dropquerydescription)


The functions on this page run installed or interpret queries in TigerGraph. All functions in this module are called as methods on a [`TigerGraphConnection` object](https://docs.tigergraph.com/pytigergraph/current/core-functions/base).
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_showquery)showQuery()
`showQuery(queryName: str) → str`
Returns the string of the given GSQL query.
#### Parameter:
  * `queryName (str)`: Name of the query to get metadata of.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerymetadata)getQueryMetadata()
`getQueryMetadata(queryName: str) → dict`
Returns metadata details about a query. Specifically, it lists the input parameters in the same order as they exist in the query and outputs `PRINT` statement syntax.
#### Parameter:
  * `queryName (str)`: Name of the query to get metadata of.


#### Endpoints:
  * `POST /gsqlserver/gsql/queryinfo` (In TigerGraph versions 3.x) See xref:tigergraph-server:API:built-in-endpoints.adoc_get_query_metadata
  * `POST /gsql/v1/queries/signature` (In TigerGraph versions 4.x)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getinstalledqueries)getInstalledQueries()
`getInstalledQueries(fmt: str = "py") → Union[dict, str, pd.DataFrame]`
Returns a list of installed queries.
#### Parameter:
  * `fmt`: Format of the results:
    * "py": Python objects (default)
    * "json": JSON document
    * "df": pandas DataFrame


#### Returns:
The names of the installed queries.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinstalledquery)runInstalledQuery()
`runInstalledQuery(queryName: str, params: Union[str, dict] = None, timeout: int = None, sizeLimit: int = None, usePost: bool = False, runAsync: bool = False, replica: int = None, threadLimit: int = None, memoryLimit: int = None) → list`
Runs an installed query.
The query must be already created and installed in the graph. Use `getEndpoints(dynamic=True)` or GraphStudio to find out the generated endpoint URL of the query. Only the query name needs to be specified here.
#### Parameters:
  * `queryName`: The name of the query to be executed.
  * `params`: Query parameters. A string of param1=value1&param2=value2 format or a dictionary. See below for special rules for dictionaries.
  * `timeout`: Maximum duration for successful query execution (in milliseconds). See [GSQL query timeout](https://docs.tigergraph.com/tigergraph-server/4.2/API/#_gsql_query_timeout)
  * `sizeLimit`: Maximum size of response (in bytes). See [Response size](https://docs.tigergraph.com/tigergraph-server/4.2/API/#_response_size)
  * `usePost`: Defaults to False. The RESTPP accepts a maximum URL length of 8192 characters. Use POST if additional parameters cause you to exceed this limit, or if you choose to pass an empty set into a query for database versions >= 3.8
  * `runAsync`: Run the query in asynchronous mode. See [Async operation](https://docs.tigergraph.com/gsql-ref/4.2/querying/query-operations#_detached_mode_async_option)
  * `replica`: If your TigerGraph instance is an HA cluster, specify which replica to run the query on. Must be a value between [1, (cluster replication factor)]. See [Specify replica](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_specify_replica)
  * `threadLimit`: Specify a limit of the number of threads the query is allowed to use on each node of the TigerGraph cluster. See [Thread limit](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_specify_thread_limit)
  * `memoryLimit`: Specify a limit to the amount of memory consumed by the query (in MB). If the limit is exceeded, the query will abort automatically. Supported in database versions >= 3.8. See [Memory limit](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/memory-management#_by_http_header)


#### Returns:
The output of the query, a list of output elements (vertex sets, edge sets, variables, accumulators, etc.
#### Notes:
When specifying parameter values in a dictionary:
  * For primitive parameter types use `"key": value`
  * For `SET` and `BAG` parameter types with primitive values, use `"key": [value1, value2, …​]`
  * For `VERTEX<type>` use `"key": primary_id`
  * For `VERTEX` (no vertex type specified) use `"key": (primary_id, "vertex_type")`
  * For `SET<VERTEX<type>>` use `"key": [primary_id1, primary_id2, …​]`
  * For `SET<VERTEX>` (no vertex type specified) use `"key": [(primary_id1, "vertex_type1"), (primary_id2, "vertex_type2"), …​]`
#### Endpoints:
  * `GET /query/{graph_name}/{query_name}` See [Run an installed query (GET)](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_run_an_installed_query_get)
  * `POST /query/{graph_name}/{query_name}` See [Run an installed query (POST)](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_run_an_installed_query_post)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_checkquerystatus)checkQueryStatus()
`checkQueryStatus(requestId: str = "")`
Checks the status of the queries running on the graph specified in the connection.
#### Parameter:
  * `requestId (str, optional)`: String ID of the request. If empty, returns all running requests. See [Check query status (detached mode)](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_check_query_status_detached_mode)


#### Endpoint:
  * `GET /query_status/{graph_name}` See [Check query status (detached mode)](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_check_query_status_detached_mode)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getqueryresult)getQueryResult()
`getQueryResult(requestId: str = "")`
Gets the result of a detached query.
#### Parameter:
  * `requestId (str)`: String ID of the request. See [Check query results (detached mode)](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_check_query_results_detached_mode)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_runinterpretedquery)runInterpretedQuery()
`runInterpretedQuery(queryText: str, params: Union[str, dict] = None) → list`
Runs an interpreted query.
Use `$graphname` or `@graphname@` in the `FOR GRAPH` clause to avoid hardcoding the name of the graph in your app. It will be replaced by the actual graph name.
#### Parameters:
  * `queryText`: The text of the GSQL query that must be provided in this format:


```
INTERPRET QUERY (<params>) FOR GRAPH <graph_name> {
<statements>
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * `params`: A string of `param1=value1&param2=value2…​` format or a dictionary. See below for special rules for dictionaries.


#### Returns:
The output of the query, a list of output elements such as vertex sets, edge sets, variables and accumulators.
#### Notes:
When specifying parameter values in a dictionary:
  * For primitive parameter types use `"key": value`
  * For `SET` and `BAG` parameter types with primitive values, use `"key": [value1, value2, …​]`
  * For `VERTEX<type>` use `"key": primary_id`
  * For `VERTEX` (no vertex type specified) use `"key": (primary_id, "vertex_type")`
  * For `SET<VERTEX<type>>` use `"key": [primary_id1, primary_id2, …​]`
  * For `SET<VERTEX>` (no vertex type specified) use `"key": [(primary_id1, "vertex_type1"), (primary_id2, "vertex_type2"), …​]`


#### Endpoints:
  * `POST /gsqlserver/interpreted_query` (In TigerGraph versions 3.x) See [Run an interpreted query](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_run_an_interpreted_query)
  * `POST /gsql/v1/queries/interpret` (In TigerGraph versions 4.x)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getrunningqueries)getRunningQueries()
`getRunningQueries() → dict`
Reports the statistics of currently running queries on the graph.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_abortquery)abortQuery()
`abortQuery(request_id: Union[str, list] = None, url: str = None)`
This function safely abortsa a selected query by ID or all queries of an endpoint by endpoint URL of a graph. If neither `request_id` or `url` are specified, all queries currently running on the graph are aborted.
#### Parameters:
  * `request_id (str, list, optional)`: The ID(s) of the query(s) to abort. If set to "all", it will abort all running queries. url


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_parsequeryoutput)parseQueryOutput()
`parseQueryOutput(output: list, graphOnly: bool = True) → dict`
Parses query output and separates vertex and edge data (and optionally other output) for easier use.
#### Parameters:
  * `output`: The data structure returned by `runInstalledQuery()` or `runInterpretedQuery()`.
  * `graphOnly`: If `True` (the default setting), restricts captured output to vertices and edges. If `False`, captures values of variables and accumulators and any other plain text printed.


#### Returns:
A dictionary with two (or three) keys: `"vertices"`, `"edges"` and optionally `"output"`. The first two refer to another dictionary containing keys for each vertex and edge types found and the instances of those vertex and edge types. `"output"` is a list of dictionaries containing the key/value pairs of any other output.
The JSON output from a query can contain a mixture of results: vertex sets (the output of a SELECT statement), edge sets (e.g. collected in a global accumulator), printout of global and local variables and accumulators, including complex types (LIST, MAP, etc.). The type of the various output entries is not explicit and requires manual inspection to determine the type.
This function "cleans" this output, separating and collecting vertices and edges in an easy to access way. It can also collect other output or ignore it. The output of this function can be used e.g. with the `vertexSetToDataFrame()` and `edgeSetToDataFrame()` functions or (after some transformation) to pass a subgraph to a visualization component.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getstatistics)getStatistics()
`getStatistics(seconds: int = 10, segments: int = 10) → dict`
Retrieves real-time query performance statistics over the given time period.
#### Parameters:
  * `seconds`: The duration of statistic collection period (the last _n_ seconds before the function call).
  * `segments`: The number of segments of the latency distribution (shown in results as `LatencyPercentile`). By default, segments is `10`, meaning the percentile range 0-100% will be divided into ten equal segments: 0%-10%, 11%-20%, etc. This argument must be an integer between 1 and 100.


#### Endpoint:
  * `GET /statistics/{graph_name}` See [Show query performance](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_show_query_performance)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_describequery)describeQuery()
`describeQuery(queryName: str, queryDescription: str, parameterDescriptions: dict)`
Add a query description and parameter descriptions. Only supported on versions of TigerGraph >= 4.0.0.
#### Parameters:
  * `queryName`: The name of the query to describe.
  * `queryDescription`: A description of the query.
  * `parameterDescriptions (optional)`: A dictionary of parameter descriptions. The keys are the parameter names and the values are the descriptions.


#### Returns:
The response from the database.
#### Endpoints:
  * `PUT /gsqlserver/gsql/description?graph={graph_name}` (In TigerGraph version 4.0)
  * `PUT /gsql/v1/description?graph={graph_name}` (In TigerGraph versions >4.0)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerydescription)getQueryDescription()
`getQueryDescription(queryName = "all")`
Get the description of a query. Only supported on versions of TigerGraph >= 4.0.0.
#### Parameter:
  * `queryName`: The name of the query to get the description of. If multiple query descriptions are desired, pass a list of query names. If set to "all", returns the description of all queries.


#### Returns:
The description of the query(ies).
#### Endpoints:
  * `GET /gsqlserver/gsql/description?graph={graph_name}` (In TigerGraph version 4.0)
  * `GET /gsql/v1/description?graph={graph_name}` (In TigerGraph versions >4.0)


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_dropquerydescription)dropQueryDescription()
`dropQueryDescription(queryName: str, dropParamDescriptions: bool = True)`
Drop the description of a query. Only supported on versions of TigerGraph >= 4.0.0.
#### Parameters:
  * `queryName`: The name of the query to drop the description of. If set to "*", drops the description of all queries.
  * `dropParamDescriptions`: Whether to drop the parameter descriptions as well. Defaults to True.


#### Returns:
The response from the database.
#### Endpoints:
  * `DELETE /gsqlserver/gsql/description?graph={graph_name}` (In TigerGraph version 4.0)
  * `DELETE /gsql/v1/description?graph={graph_name}` (In TigerGraph versions >4.0)


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


